--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "repository": "git@github.com:strapi/design-system.git",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "scripts": {
     "analyze:bundle": "lerna run analyze:bundle --stream",
     "bootstrap": "lerna bootstrap",
