--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "design-system",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "git@github.com:strapi/design-system.git",
+  "repository": "git@github.com:add/add-design-system.git",
   "license": "MIT",
   "private": false,
   "scripts": {
     "analyze:bundle": "lerna run analyze:bundle --stream",
     "bootstrap": "lerna bootstrap",
     "build-storybook": "lerna run build-storybook --stream",
-    "build": "lerna run build --stream --scope=@strapi/icons && lerna run build --stream --scope=@strapi/design-system",
+    "build": "lerna run build --stream --scope=@add/icons && lerna run build --stream --scope=@add/design-system",
     "generate": "plop",
     "lint-staged": "lerna run lint-staged --stream --",
     "lint": "lerna run lint --stream",
