--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-design-system",
+  "name": "devdesignsystemfor123",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:add/add-design-system.git",
