--- a/packages/add-design-system/package.json
+++ b/packages/add-design-system/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@add/design-system",
+  "name": "@addnewcoder/design-system",
   "version": "0.0.1-alpha.70",
   "main": "index.js",
   "license": "MIT",
