--- a/package.json
+++ b/package.json
@@ -43,5 +43,10 @@
   "lint-staged": {
     "*.{js,jsx}": "yarn lint-staged"
   },
-  "dependencies": {}
+  "dependencies": {},
+  
+  "files": [
+      "dist"
+    ]
+  
 }
